EDIT: Tried PMD. Implemented a few fixes.